# crm-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  auth.py  batch1_leads_flat.csv  business.py  db.py  docker-compose.yml  email_service.py  index.html  leverage-crm.service  limiter.py  models.py  nginx.conf.example  package-lock.json  package.json  pyproject.toml  reset_password.py  routes.py  routes.py.bak.20260612-002924  routes.py.bak.20260612_000808  secrets_utils.py  seed.py  start.ps1  start.sh  tasks.json  vite.config.ts
src/: App.tsx  api.ts  types.ts
src/components/: Badges.tsx  EmailSettingsPanel.tsx  Layout.tsx  SegmentsSettingsPanel.tsx
src/pages/: DashboardPage.tsx  ExportPage.tsx  ImportPage.tsx  LeadCreatePage.tsx  LeadDetailPage.tsx  LeadsPage.tsx  LoginPage.tsx  PipelinePage.tsx  RegisterPage.tsx  SettingsPage.tsx
