[project]
name = "leverage-crm-lite"
version = "0.1.0"
description = "Lightweight CRM for solo outreach - track leads, pipeline, follow-ups"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "python-multipart==0.0.22",
    "watchfiles==1.1.1",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.12",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
    "python-dateutil>=2.9.0.post0",
    "pydantic[email]>=2.12.5",
]

[tool.uv]
exclude-newer = "14 days"
# workshop-connect is published by us; exempt from the rolling window.
exclude-newer-package = { workshop-connect = "2027-01-01" }
